// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route template should generate nested routes 1`] = `
"const Foo = () => import(/* webpackChunkName: \\"foo\\" */ '@/pages/foo.vue')
const FooBar = () => import(/* webpackChunkName: \\"bar\\" */ '@/pages/bar.vue')
const FooBaz = () => import(/* webpackChunkName: \\"baz\\" */ '@/pages/baz.vue')

export default [
  {
    name: 'foo',
    path: '/foo',
    component: Foo,
    children: [
  {
    name: 'bar',
    path: 'bar',
    component: FooBar
  },
  {
    name: 'baz',
    path: 'baz',
    component: FooBaz
  }]
  }]"
`;

exports[`Route template should generate routes 1`] = `
"const Foo = () => import(/* webpackChunkName: \\"foo\\" */ '@/pages/foo.vue')
const Bar = () => import(/* webpackChunkName: \\"bar\\" */ '@/pages/bar.vue')

export default [
  {
    name: 'foo',
    path: '/foo',
    component: Foo
  },
  {
    name: 'bar',
    path: '/bar',
    component: Bar
  }]"
`;

exports[`Route template should generate static import code 1`] = `
"import Foo from '@/pages/foo.vue'
import Bar from '@/pages/bar.vue'

export default [
  {
    name: 'foo',
    path: '/foo',
    component: Foo
  },
  {
    name: 'bar',
    path: '/bar',
    component: Bar
  }]"
`;
